[package]
name = "transaction-builder-generator"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem transaction-builder"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
heck = "0.3.2"
regex = "1.5.5"
structopt = "0.3.21"
textwrap = "0.13.4"
serde-reflection = "0.3.2"
serde-generate = { git = "https://github.com/dhaneshacn/serde-reflection-diem.git", rev = "9c8a4eba98dddb9f5f6658d47cb41d2e63eaadc3" }
serde_yaml = "0.8.17"

diem-types = { path = "../../../types" }
diem-workspace-hack = { path = "../../../crates/diem-workspace-hack" }
move-core-types = { path = "../../move-core/types" }
bcs = { git = "https://github.com/diem/bcs", rev = "9f435a13d859ce333b8e9fc5cb2d95fac06cb26a" }

[dev-dependencies]
tempfile = "3.2.0"
which = "4.0.2"

[features]
default = []

[[bin]]
name = "generate-transaction-builders"
path = "src/generate.rs"
test = false
